--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159220391-11"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<html>
 
-  gtag('config', 'UA-159220391-11');
-</script>
+<head>
+  <!-- Tracking -->
+  <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
 
-<title>#TooManyTests</title>
+  <title>#TooManyTests</title>
 
-#TooManyTests
+  <style>
+    .legal {
+      position: absolute;
+      margin-bottom: 5px;
+      margin-right: 5px;
+      bottom: 0;
+      right: 0;
+    }
+
+    .legal>a {
+      color: blue;
+    }
+  </style>
+</head>
+
+<body>
+  #TooManyTests
+
+  <small class='legal'>
+    For legal reasons I must also link <a href="https://inform.everyone.wtf/" target="_blank">my Privacy Policy and Imprint</a>.
+  </small>
+</body>
+
+</html>
