Use 'legal.min.js'

--- a/index.html
+++ b/index.html
@@ -3,30 +3,13 @@
 <head>
   <!-- Tracking -->
   <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js?small"></script>
 
   <title>#TooManyTests</title>
-
-  <style>
-    .legal {
-      position: absolute;
-      margin-bottom: 5px;
-      margin-right: 5px;
-      bottom: 0;
-      right: 0;
-    }
-
-    .legal>a {
-      color: blue;
-    }
-  </style>
 </head>
 
 <body>
   #TooManyTests
-
-  <small class='legal'>
-    For legal reasons I must also link <a href="https://inform.everyone.wtf/" target="_blank">my Privacy Policy and Imprint</a>.
-  </small>
 </body>
 
 </html>
