--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-  <!-- Tracking -->
-  <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
-  <script async src="https://inform.everyone.wtf/legal.min.js?small"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js?small" data-site-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
 
   <title>#TooManyTests</title>
 </head>
