Update legal script options

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <script async src="https://inform.everyone.wtf/legal.min.js?small" data-site-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js?float" data-site-id="8b7f0d9c-70de-4b57-b159-c078da572f62"></script>
 
   <title>#TooManyTests</title>
 </head>
